# amr_project

./: .gitignore  README.md  ask  ask.pub
src/amr_project/: package.xml  setup.py
src/amr_project/robot_description/: CMakeLists.txt  package.xml
src/amr_project/robot_description/config/: controllers.yaml  slam_toolbox_params.yaml
src/amr_project/robot_description/launch/: display.launch.py  gazebo.launch.py  gazebo_slam.launch.py  slam.launch.py
src/amr_project/robot_description/rviz/: display.rviz
src/amr_project/robot_description/urdf/: amr_controller.xacro  bot.urdf  bot.urdf.xacro  bot_gazebo.xacro
